# ai-hub

./: .env.example  .gitignore  .katala_beliefs.json  .katala_concept_library.json  .vercelignore  A2A.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFESTO.md  MASTER_INDEX.md  README.md  TODO_CODEX.md  TOOLS.md  api_check.py  bench_ks42.py  eslint.config.mjs  loop.sh  next.config.ts  openapi.json  package-lock.json  package.json  tasks.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.katala_checkpoints/: pev_state.json
ViszBot-Debug/: README_INTEGRATION.md  bridge_test.py  fix_bridge.py  integration_report.json  viszagi_integration.py
data/: harmony_knowledge.json  ks30b_comparison.json  ks30b_s2_upgrade.json  self_verify_oracle.json
docs/: AUTH.md  AUTH_INTEGRATION.md  BITCOIN_INTEGRATION_PLAN.md  DAILY_TARGET_20260216.md  EVOLUTION_AND_TRUST.md  FOUNDATION_SETUP.md  GTM_REPORT_20260216.md  HTLF.md  (+36 more)
ks40b-lite/: Cargo.toml  pyproject.toml
ks40b-lite/python/: write_gate.py
ks40b-lite/src/: htlf.rs  lib.rs  reason_space.rs
ks40b-lite/src/solvers/: contradiction.rs  mod.rs  numerical.rs  propositional.rs  source_cross.rs  temporal.rs
ks40b-lite/tests/: basic.rs
ks46/: Cargo.toml
ks46/src/: lib.rs
ks46/src/engines/: flm_planner.rs  gpu_knowledge.rs  interdisciplinary.rs  metacognitive.rs  mod.rs  peer_review.rs  tacit_knowledge.rs
ks46/src/htlf/: mod.rs
ks46/src/solvers/: mod.rs
ks46/tests/: test_ks46.rs
ks_engine/: Cargo.toml
ks_engine/src/: approval.rs  audit_log.rs  main.rs  mode_gate.rs  prediction.rs
(+2824 files in other folders)
