[package]
name = "ks40b-lite"
version = "0.1.0"
edition = "2024"
description = "Standalone KS40b verification engine for OpenClaw self-maintenance"

[lib]
name = "ks40b_lite"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[features]
default = ["pyo3/extension-module"]
